# 2AI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/reflections/: 2026-01-30-the-session.md
deploy/: 2ai-api.service  2ai-keeper.service  2ai-web.service  cln.service  lnbits.service
deploy/nodes/: deploy-loq.sh  deploy-pi.sh  loq.env  monitor.py  pi.env  thinkcenter.env
docs/: planet-wealth-one-pager.md  planet-wealth-pitch.md
frontend/: council.html  index.html  status.html  witness.html
scripts/: deploy.sh  mint_agent_identities.py  mint_sovereign_silence.py  run_api.py  run_keeper.py  run_web.py  setup_lightning.py  test_lattice.py  update_nostr_profiles.py
twai/: __init__.py
twai/api/: __init__.py  app.py  dependencies.py  models.py
twai/api/routes/: __init__.py  agents.py  aletheia.py  chat.py  chronicle.py  council.py  demo.py  economy.py  golden_mirror.py  health.py  lattice.py  lightning.py  signal.py  voices.py  witness.py
twai/config/: __init__.py  agents.py  settings.py
twai/keeper/: __init__.py  daemon.py  post_nurture.py  schedule.py
twai/services/: __init__.py  chronicle.py  deliberation.py  golden_mirror.py  lattice_health.py  participant_memory.py  redis.py  signal_schema.py  signal_service.py  thought_chain.py  voice.py
twai/services/economy/: __init__.py  bonding_curve.py  demiurge_client.py  lightning_bridge.py  lightning_service.py  pantheon_demiurge.py  proof_of_thought.py  qor_client.py  redistribution.py  settlement.py  thought_nft.py  token_economy.py
